--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "react-credit-cards-demo-forked",
-  "version": "0.0.0",
-  "description": "Demo for react-credit-cards",
-  "keywords": [],
-  "main": "index.js",
+  "name": "credit-cards-demo",
+  "version": "2.0.0",
+  "private": true,
+  "type": "module",
+  "description": "Modern credit card checkout demo rebuilt with React, Tailwind CSS and TypeScript",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "tsc --noEmit"
+  },
   "dependencies": {
-    "payment": "2.3.0",
-    "react": "16.13.1",
-    "react-credit-cards": "0.8.2",
-    "react-dom": "16.13.1"
+    "clsx": "^2.1.1",
+    "payment": "^2.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "react-scripts": "1.0.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "@tailwindcss/postcss": "^4.0.0-alpha.18",
+    "@types/payment": "^2.1.7",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.2",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^4.0.0-alpha.18",
+    "typescript": "^5.4.5",
+    "vite": "^5.4.2"
   }
 }
